force-app/main/default/objects/copado__User_Story__c/fields/copadoconnect__External_ID__c.field-meta.xml
<CustomField>
    <fullName>copadoconnect__External_ID__c</fullName>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>