force-app/main/default/objects/copado__User_Story__c/fields/Destination_Org__c.field-meta.xml
<CustomField>
    <fullName>Destination_Org__c</fullName>
    <label>Destination Org</label>
    <length>50</length>
    <type>Text</type>
</CustomField>