force-app/main/default/objects/copado__User_Story__c/fields/TestQADeploy__c.field-meta.xml
<CustomField>
    <fullName>TestQADeploy__c</fullName>
    <formula>$User.DeployToQA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TestQADeploy</label>
    <type>Checkbox</type>
</CustomField>