force-app/main/default/objects/copado__User_Story__c/validationRules/Check_Can_Deploy.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Can_Deploy</fullName>
    <active>true</active>
    <errorConditionFormula>and(
  OR(  
     AND(
       PRIORVALUE(copado__Promote_Change__c) = false,
        copado__Promote_Change__c = true
     ),
     AND(
      PRIORVALUE(copado__Promote_and_Deploy__c) = false,
       copado__Promote_and_Deploy__c = true
        )
     ),
 not(CheckDeploy__c)
)</errorConditionFormula>
    <errorMessage>Sorry you cannot deploy to this Org</errorMessage>
</ValidationRule>