force-app/main/default/objects/copado__User_Story__c/listViews/copado__Cli_Listview.listView-meta.xml
<ListView>
    <fullName>copado__Cli_Listview</fullName>
    <columns>NAME</columns>
    <columns>copado__User_Story_Title__c</columns>
    <columns>copado__Status__c</columns>
    <columns>copado__Project__c</columns>
    <columns>copado__Org_Credential__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>US-0001484</value>
    </filters>
    <label>Cli Listview</label>
</ListView>