force-app/main/default/objects/copado__User_Story__c/listViews/PK_AssignedToMe.listView-meta.xml
<ListView>
    <fullName>PK_AssignedToMe</fullName>
    <columns>NAME</columns>
    <columns>copado__User_Story_Title__c</columns>
    <columns>AssignedTo__c</columns>
    <columns>AzureID__c</columns>
    <columns>copado__Promote_Change__c</columns>
    <columns>copado__Status__c</columns>
    <columns>copado__Environment__c</columns>
    <columns>copado__Release__c</columns>
    <columns>copado__Epic__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AssignedToMe__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>copado__Epic__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>copado__User_Story__c.copado__Bug,copado__User_Story__c.copado__Investigation,copado__User_Story__c.copado__User_Story</value>
    </filters>
    <filters>
        <field>copado__Environment__c</field>
        <operation>notEqual</operation>
        <value>,VolvoPreProd,VolvoProduction</value>
    </filters>
    <label>Assigned To Me</label>
</ListView>