force-app/main/default/objects/copado__User_Story__c/listViews/QSS_2_2_SIT_Ready_to_promote.listView-meta.xml
<ListView>
    <fullName>QSS_2_2_SIT_Ready_to_promote</fullName>
    <columns>NAME</columns>
    <columns>copado__User_Story_Title__c</columns>
    <columns>AssignedTo__c</columns>
    <columns>copado__Status__c</columns>
    <columns>copado__Environment__c</columns>
    <columns>copado__Promote_Change__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>copado__Epic__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>copado__Environment__c</field>
        <operation>equals</operation>
        <value>VolvoSIT</value>
    </filters>
    <filters>
        <field>copado__Promote_Change__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>copado__Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled</value>
    </filters>
    <filters>
        <field>copado__Epic__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>copado__User_Story__c.copado__Bug,copado__User_Story__c.copado__User_Story</value>
    </filters>
    <filters>
        <field>copado__Project__c</field>
        <operation>equals</operation>
        <value>VolvoQSS</value>
    </filters>
    <label>QSS 2.2 SIT Ready to promote</label>
</ListView>