force-app/main/default/objects/copado__User_Story__c/listViews/SOM_Parts.listView-meta.xml
<ListView>
    <fullName>SOM_Parts</fullName>
    <columns>NAME</columns>
    <columns>copado__User_Story_Title__c</columns>
    <columns>copado__Environment__c</columns>
    <columns>copado__Release__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>copado__Promote_Change__c</columns>
    <columns>copado__Status__c</columns>
    <columns>copado__Project__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>copado__Project__c</field>
        <operation>equals</operation>
        <value>VolvoSOM&amp;Parts</value>
    </filters>
    <filters>
        <field>copado__Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled</value>
    </filters>
    <label>SOM/Parts</label>
</ListView>