force-app/main/default/objects/copado__User_Story__c/listViews/Support.listView-meta.xml
<ListView>
    <fullName>Support</fullName>
    <columns>NAME</columns>
    <columns>copado__User_Story_Title__c</columns>
    <columns>copado__Team__c</columns>
    <columns>copado__Status__c</columns>
    <columns>copado__Release__c</columns>
    <columns>copado__Promote_Change__c</columns>
    <columns>copado__Pull_Requests_Approved__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>copado__Org_Credential__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>copado__Team__c</field>
        <operation>equals</operation>
        <value>VCE QSS Support</value>
    </filters>
    <filters>
        <field>copado__Org_Credential__c</field>
        <operation>notEqual</operation>
        <value>VolvoProduction</value>
    </filters>
    <filters>
        <field>copado__Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled</value>
    </filters>
    <label>Support</label>
</ListView>