force-app/main/default/objects/copado__User_Story__c/listViews/View_All.listView-meta.xml
<ListView>
    <fullName>View_All</fullName>
    <columns>NAME</columns>
    <columns>copado__User_Story_Title__c</columns>
    <columns>copado__Org_Credential__c</columns>
    <columns>copado__Is_Bundle__c</columns>
    <columns>copado__Project__c</columns>
    <columns>copado__Promote_Change__c</columns>
    <filterScope>Everything</filterScope>
    <label>View All</label>
</ListView>